Fix Header css and alignment and how the links look.

--- a/ob/src/components/Header/Header.css
+++ b/ob/src/components/Header/Header.css
@@ -53,9 +53,10 @@
     padding: 0 0.5rem
 }
 
-.header_navigation-items a {
+.header_navigation-items a{
     color: white;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .header_navigation-items a:hover, .header_navigation-items a:active{
